--- a/hata_plus/index.html
+++ b/hata_plus/index.html
@@ -96,7 +96,7 @@
                         <td class="house-one wrapper">
                             <table class="w100">
                                 <tr>
-                                    <td><a href="https://fisvif.github.io/hata_plus/price.html"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house1.jpg" alt="будинок №1"></a></td>
+                                    <td><a href="https://fisvif.github.io/hata_plus/price.html"><img class="w100" src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house1.jpg" alt="будинок №1"></a></td>
                                     <td class="house-one-txt">
                                         <h3><a href="https://fisvif.github.io/hata_plus/price.html">MONTREAL (332 м<sup>2</sup>)</a></h3>
                                         <p>
@@ -130,7 +130,7 @@
                                             Гараж: 2 авто
                                         </p>
                                     </td>
-                                    <td><a href="https://fisvif.github.io/hata_plus/price.html"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house2.jpg" alt="будинок №2"></a></td>
+                                    <td><a href="https://fisvif.github.io/hata_plus/price.html"><img class="w100" src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house2.jpg" alt="будинок №2"></a></td>
                                 </tr>
                             </table>
                         </td>
@@ -139,7 +139,7 @@
                         <td class="house-tree wrapper">
                             <table class="w100">
                                 <tr>
-                                    <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house3.jpg" alt="будинок №3"></td>
+                                    <td><a href="https://fisvif.github.io/hata_plus/price.html"><img class="w100" src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/house3.jpg" alt="будинок №3"></a></td>
                                     <td class="house-one-txt">
                                         <h3><a href="https://fisvif.github.io/hata_plus/price.html">CALGARY (294 м<sup>2</sup>)</a></h3>
                                         <p>
