--- a/hata_plus/index.html
+++ b/hata_plus/index.html
@@ -12,8 +12,8 @@
             <td class="wrapper header"><!--верхівка -->
                 <table class="w100">
                     <tr>
-                        <td><a href="https://fisvif.github.io/hata_plus/"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/logo.jpg" alt="логотип"></a></td>
-                        <td>
+                        <td><a href="https://fisvif.github.io/hata_plus/"><img class="w100" src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/logo.jpg" alt="логотип"></a></td>
+                        <td><!--номер телефонів і текст -->
                             <p class="align-txt tell">
                                 <img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/ico-phone.jpg" alt="телефон">
                                 <a href="tel:+38(097) 100-25-25">+38(097) 100-25-25</a>
@@ -30,7 +30,7 @@
             <td class="midle"><!--середина -->
                 <table>
                     <tr><!-- пропозиція місяця-->
-                        <td>
+                        <td class="banner">
                             <a href="https://fisvif.github.io/hata_plus/"><img class="w100" src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg-offer.jpg" alt="пропоиція місяця"></a>
                         </td>
                     </tr>
@@ -45,49 +45,23 @@
                             <a  class="battom" href="https://fisvif.github.io/hata_plus/">Детальніше про нас</a>
                         </td>
                     </tr>
-                    <tr><!--переваги зробити-->
-                        <td class="wrapper advantages">
+                    <tr><!--переваги-->
+                        <td class="advantages">
                             <table class="w100">
-                                <tr>
-                                    <td><!-- перша колонка-->
-                                        <table class="w100">
-                                            <tr>
-                                                <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg_star.png" alt="знак"></td>
-                                            </tr>
-                                            <tr>
-                                                <td class="advantages-txt">
-                                                    <h4><b>Зручне розташування</b></h4>
-                                                    <p>Наші котеджі знаходяться<br> по всій країні</p>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                    <td><!-- друга колонка-->
-                                        <table class="w100">
-                                            <tr>
-                                                <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg_home.png" alt="знак"></td>
-                                            </tr>
-                                            <tr>
-                                                <td class="advantages-txt">
-                                                    <h4><b>Зручне розташування</b></h4>
-                                                    <p>Понад 50 видів котеджів<br>з усіма зручностями</p>
-                                                </td>
-                                            </tr>
-                                        </table>   
-                                    </td>
-                                    <td><!-- треття колонка-->
-                                        <table class="w100">
-                                            <tr>
-                                                <td><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg_three.png" alt="знак"></td>
-                                            </tr>
-                                            <tr>
-                                                <td class="advantages-txt">
-                                                    <h4><b>Зручне розташування</b></h4>
-                                                    <p>Скалиста місцевіть, свіже<br> повітря, та риболовля</p>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
+                                <tr><!-- картинки-->
+                                    <td class="pad10px"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg_star.png" alt="знак"></td>
+                                    <td class="pad10px"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg_home.png" alt="знак"></td>
+                                    <td class="pad10px"><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/bg_three.png" alt="знак"></td>
+                                </tr>
+                                <tr><!-- друга колонка-->
+                                    <td class="advantages-txt"><h4><b>Зручне розташування</b></h4></td>
+                                    <td class="advantages-txt"><h4><b>Дика природа</b></h4></td>
+                                    <td class="advantages-txt"><h4><b>Широкий вибір</b></h4></td>  
+                                </tr>
+                                <tr><!-- треття колонка-->
+                                    <td class="pad10px"><p>Наші котеджі знаходяться<br> по всій країні</p></td>
+                                    <td class="pad10px"><p>Понад 50 видів котеджів<br>з усіма зручностями</p></td>
+                                    <td class="pad10px"><p>Скалиста місцевіть, свіже<br> повітря, та риболовля</p></td>
                                 </tr>
                             </table>
                         </td>
@@ -104,7 +78,7 @@
                                             лісом, чи не на кожній дільниці сосна,<br>
                                             береза або клен.
                                         </p>
-                                        <p>Загальна площа будови: 290 м2<br>
+                                        <p>Загальна площа будови: 290 м<sup>2</sup><br>
                                             Кількість спалень: 3<br>
                                             Гараж: 2 авто
                                         </p>
@@ -125,7 +99,7 @@
                                             високошвидкісна Інтернет.
                                         </p>
                                         <p>
-                                            Загальна площа будови: 312 м2<br> 
+                                            Загальна площа будови: 312 м<sup>2</sup><br> 
                                             Кількість спалень: 4<br> 
                                             Гараж: 2 авто
                                         </p>
@@ -148,7 +122,7 @@
                                             від містечка знаходяться дитячий садок.
                                         </p>
                                         <p>
-                                            Загальна площа будови: 272 м2<br>
+                                            Загальна площа будови: 272 м<sup>2</sup><br>
                                             Кількість спалень: 3<br>
                                             Гараж: 2 авто
                                         </p>
@@ -173,20 +147,31 @@
         </tr>
         <tr><!--низ-->
             <td class="bg-grey"></td>
-            <td class="bottom wrapper"><!--низ-->
-                <a href=""><img class="mg-none" src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_tw.png" alt="twitter"></a>
-                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_fb.png" alt="facebook"></a>
-                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_wifi.png" alt="wifi"></a>
-                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_pt.png" alt="pen"></a>
-                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_google.png" alt="google+"></a>
-                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_ball.png" alt="ball"></a>
-                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_in.png" alt="in"></a>
-                <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_fl.png" alt="points"></a>
-                <p class="copy">&copy; Будівельна компанія “Хата Плюс” 2018.</p>
-                <p class="about-bottom">
-                    <a href="https://fisvif.github.io/hata_plus/" class="right-line">Перейти на сайт</a>
-                    <a href="https://fisvif.github.io/hata_plus/">Відписатися</a>
-                </p>
+            <td>
+                <table class="w100">
+                    <tr>
+                        <td class="bottom wrapper"><!--низ-->
+                            <a href=""><img class="mg-none" src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_tw.png" alt="twitter"></a>
+                            <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_fb.png" alt="facebook"></a>
+                            <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_wifi.png" alt="wifi"></a>
+                            <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_pt.png" alt="pen"></a>
+                            <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_google.png" alt="google+"></a>
+                            <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_ball.png" alt="ball"></a>
+                            <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_in.png" alt="in"></a>
+                            <a href=""><img src="https://raw.githubusercontent.com/fisvif/Email/master/hata_plus/images/social_fl.png" alt="points"></a>
+                            <p class="copy">&copy; Будівельна компанія “Хата Плюс” 2018.</p>
+                        </td>
+                    </tr>    
+                    <tr>
+                        <td class="about-bottom wrapper">
+                            <p>
+                                <a href="https://fisvif.github.io/hata_plus/" class="right-line">Перейти на сайт</a>
+                                <a href="https://fisvif.github.io/hata_plus/">Відписатися</a>
+                            </p>
+                        </td>
+                    </tr>
+                    
+                </table>
             </td>
             <td class="bg-grey"></td>
         </tr>
